--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background: linear-gradient(to right, #6a11cb, #2575fc);
+    background: linear-gradient(to right,rgb(180, 110, 255), #2575fc);
     color: #fff;
     padding: 4rem 1rem;
     text-align: center;
@@ -42,7 +42,7 @@ section:hover {
 
 section h2 {
     font-size: 1.8rem;
-    color: #6a11cb;
+    color: rgb(180, 110, 255);
     margin-top: 0;
     display: flex;
     align-items: center;
@@ -235,9 +235,9 @@ footer {
 }
 
 .comparison-item h3 {
-    color: #6a11cb;
+    color: rgb(180, 110, 255);
     margin-top: 0;
-    border-bottom: 2px solid #6a11cb;
+    border-bottom: 2px solid rgb(180, 110, 255);
     padding-bottom: 0.5rem;
 }
 
